# fanorona-aec

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.py  environment.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
fanorona_aec/: __init__.py  fanorona_env.py  fanorona_v0.py  fanorona_v1.py  move.py  state.py  utils.py
fanorona_aec/env/: fanorona_env.py  fanorona_move.py  fanorona_state.py  move.py  state.py  utils.py
gym_fanorona/: __init__.py
gym_fanorona/agents/: __init__.py  agent.py  minimax_agent.py  qlearning_agent.py  random_agent.py
gym_fanorona/envs/: __init__.py  action.py  constants.py  enums.py  fanorona_aec.py  fanorona_env.py  node.py  position.py  state.py  utils.py
src/fanorona_aec/: fanorona_v3.py
src/fanorona_aec/env/: fanorona_env.py  fanorona_state.py
tests/: test_fanorona_env.py  test_move.py  test_state.py  test_utils.py
tests/agents/: test_minimax.py  test_qlearning.py  test_random.py
tests/envs/: test_action.py  test_fanorona_env.py  test_position.py  test_state.py
