[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "fanorona-aec"
version = "2.0.1"
description = "A PettingZoo AECEnv implementation of the Fanorona board game."
readme = "README.md"
authors = [
    { name = "Abhijeet Krishnan", email = "abhijeet.krishnan@gmail.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.10"
dependencies = [
    "pettingzoo"
]

[project.urls]
Repository = "https://github.com/AbhijeetKrishnan/fanorona-aec"
"Bug Tracker" = "https://github.com/AbhijeetKrishnan/fanorona-aec/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pre-commit",
    "mypy"
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
exclude = "build"
files = [
    "fanorona_aec/*.py",
    "tests/*.py"
]
ignore_missing_imports = true
