[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "fanorona-aec"
version = "3.0.2"
description = "A PettingZoo AECEnv implementation of the Fanorona board game."
readme = "README.md"
authors = [
    { name = "Abhijeet Krishnan", email = "abhijeet.krishnan@gmail.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.10"
dependencies = [
    "pettingzoo"
]

[project.urls]
Repository = "https://github.com/AbhijeetKrishnan/fanorona-aec"
"Bug Tracker" = "https://github.com/AbhijeetKrishnan/fanorona-aec/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[tool.setuptools.package-data]
"pkgname" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["fanorona_aec"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
console_output_style = "progress"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
exclude = [
    "build",
    "dist",
    "venv",
    "tests",
]
files = [
    "fanorona_aec/**/*.py",
    "demo.py",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
