[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fanorona-aec"
version = "3.0.3"
description = "A PettingZoo AECEnv implementation of the Fanorona board game."
readme = "README.md"
authors = [
    { name = "Abhijeet Krishnan", email = "abhijeet.krishnan@gmail.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.11"
dependencies = [
    "pettingzoo"
]

[project.urls]
Repository = "https://github.com/AbhijeetKrishnan/fanorona-aec"
"Bug Tracker" = "https://github.com/AbhijeetKrishnan/fanorona-aec/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
exclude = [
    "build",
    "dist",
    "venv",
    "tests",
]
files = [
    "src/fanorona_aec/**/*.py",
    "demo.py",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
console_output_style = "progress"
